[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/DialogueChoiceUI.gd" type="Script" id=1]
[ext_resource path="res://art/Square.png" type="Texture" id=2]
[ext_resource path="res://fonts/ui_font_small.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/base_theme.tres" type="Theme" id=4]

[sub_resource type="Animation" id=1]
resource_name = "fade_normal_to_disabled"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.584314 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle_normal"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="DialogueChoiceUI" type="PanelContainer"]
anchor_right = 0.406
margin_right = 0.159973
margin_bottom = 300.0
rect_min_size = Vector2( 230, 250 )
size_flags_horizontal = 0
theme = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
self_modulate = Color( 0.282353, 0.231373, 0.384314, 0.498039 )
margin_right = 232.0
margin_bottom = 191.0
texture = ExtResource( 2 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 260.0
margin_bottom = 300.0
rect_min_size = Vector2( 260, 0 )
size_flags_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeakerName" type="Label" parent="VBoxContainer" groups=[
"font",
]]
margin_right = 260.0
margin_bottom = 19.0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Strange Lady"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialogue" type="Label" parent="VBoxContainer" groups=[
"font",
]]
margin_top = 23.0
margin_right = 260.0
margin_bottom = 152.0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "So
So... hungry... you should give me stuff. LotsSo... hungry... you should give me stuff. LotsSo... hungry... you should give me stuff. Lots... hungry... you should give me stuff. Lots"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesParent" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 156.0
margin_right = 260.0
margin_bottom = 284.0
rect_min_size = Vector2( 240, 0 )
size_flags_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YesButton" type="Button" parent="VBoxContainer/ChoicesParent" groups=[
"font",
]]
margin_right = 260.0
margin_bottom = 40.0
rect_min_size = Vector2( 260, 40 )
size_flags_horizontal = 0
theme = ExtResource( 4 )
text = "Yes"

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ChoicesParent/YesButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 7
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoButton" type="Button" parent="VBoxContainer/ChoicesParent" groups=[
"font",
]]
margin_top = 44.0
margin_right = 260.0
margin_bottom = 84.0
rect_min_size = Vector2( 260, 40 )
size_flags_horizontal = 0
theme = ExtResource( 4 )
text = "No"
clip_text = true

[node name="RichTextLabel2" type="RichTextLabel" parent="VBoxContainer/ChoicesParent/NoButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 7
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IgnoreButton" type="Button" parent="VBoxContainer/ChoicesParent" groups=[
"font",
]]
margin_top = 88.0
margin_right = 260.0
margin_bottom = 128.0
rect_min_size = Vector2( 260, 40 )
size_flags_horizontal = 0
theme = ExtResource( 4 )
text = "Maybe later"
clip_text = true

[node name="RichTextLabel3" type="RichTextLabel" parent="VBoxContainer/ChoicesParent/IgnoreButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_normal_to_disabled = SubResource( 1 )
anims/idle_normal = SubResource( 2 )

[connection signal="pressed" from="VBoxContainer/ChoicesParent/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ChoicesParent/NoButton" to="." method="_on_NoButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ChoicesParent/IgnoreButton" to="." method="_on_IgnoreButton_pressed"]
